alpine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
        running: afterLabels
    spec:
      containers:
      - name: alpine
        image: alpine
        command: ["sleep", "60"]
