alpine-pod-1m.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  namespace: default
spec:
  containers:
  - name: alpine
    image: alpine
    command:
      - sleep
      - "60"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
