custom-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: custom-scheduler
    tier: control-plane
    app: custom-scheduler
  name: custom-scheduler-aoldoni1.mylabserver.com
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-scheduler
      tier: control-plane
  template:
    metadata:
      labels:
        tier: control-plane 
        app: custom-scheduler
    spec: 
      nodeSelector:
        node-role.kubernetes.io/master: ""
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - command:
        - kube-scheduler
        - --address=127.0.0.1
        - --leader-elect=true
        - --kubeconfig=/etc/kubernetes/scheduler.conf
        - --scheduler-name=custom-scheduler
        image: gcr.io/google_containers/kube-scheduler-amd64:v1.9.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 8
          httpGet:
            host: 127.0.0.1
            path: /healthz
            port: 10251
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 15
        name: kube-scheduler
#        resources:
#          requests:
#            cpu: 100m
        volumeMounts:
        - mountPath: /etc/kubernetes/scheduler.conf
          name: kubeconfig
          readOnly: true
      volumes:
      - hostPath:
          path: /etc/kubernetes/scheduler.conf
          type: FileOrCreate
        name: kubeconfig
