simple-yaml-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-pod
  labels:
    k8s-app: simple-app
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
      containerPort: 443
